--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body{
 }
 .page-container .img-container{
     height: 30%;
-    background: url(/images/profile3.jpg) no-repeat;
+    background: url(images/profile3.jpg) no-repeat;
     background-size: cover;
 }
 .nav-section{
